# redis-deployment-topology

./: .gitignore  README.md  diagrams.ipynb  pyproject.toml
replication/: README.md  docker-compose.yaml  midgard-replica.conf  midgard.conf
sentinel/: README.md  docker-compose.yaml
sentinel/config/heimdall/: core.conf
sentinel/scripts/: reset-core-config.sh
